--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation
-	base = d68cd4c58
-	trimbase = 
+	base = 742cca7dc
+	trimbase = d68cd4c58
 	parent = upstream
 	previous = 3f8aae6f9
