--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
 	base = 68fa9fa4c
-	trimbase = 91cfbf0bf
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
