--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = track_odometry
-	base = d4ecee008
-	trimbase = 
+	base = de1e3fe1e
+	trimbase = d4ecee008
 	parent = upstream
 	previous = 3f8aae6f9
