--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
 	base = 2c60df44e
-	trimbase = 62f6c6c13
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
