--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = joystick_interrupt
-	base = 916315aee
-	trimbase = 
+	base = 68c4e82eb
+	trimbase = 916315aee
 	parent = upstream
 	previous = 3f8aae6f9
