--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
-	base = 9295c2922
-	trimbase = 
+	base = d8eaf5326
+	trimbase = 9295c2922
 	parent = upstream
 	previous = 3f8aae6f9
