--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_launch
 	base = d13f5a228
-	trimbase = 650b1d9da
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
