--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = map_organizer
-	base = 051aade04
-	trimbase = 
+	base = 21f81eba6
+	trimbase = 051aade04
 	parent = upstream
 	previous = 3f8aae6f9
