--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
 	base = 1352fe514
-	trimbase = f48917bc1
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
