--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = costmap_cspace
-	base = 7f70738de
-	trimbase = 
+	base = 4382d3ee5
+	trimbase = 7f70738de
 	parent = upstream
 	previous = 3f8aae6f9
