--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = obj_to_pointcloud
-	base = cac3b663d
-	trimbase = 
+	base = 5770fab12
+	trimbase = cac3b663d
 	parent = upstream
 	previous = 3f8aae6f9
