--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
 	base = 2035e0466
-	trimbase = bc8a6c3db
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
