--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = planner_cspace
-	base = abf26b0f3
-	trimbase = 
+	base = 6ce29f265
+	trimbase = abf26b0f3
 	parent = upstream
 	previous = 3f8aae6f9
