--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
 	base = ad5506a6d
-	trimbase = 48cbc9fba
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
