--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = safety_limiter
-	base = b3e2fd150
-	trimbase = 
+	base = f43ee10a4
+	trimbase = b3e2fd150
 	parent = upstream
 	previous = 3f8aae6f9
