--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
 	base = 55d411f77
-	trimbase = b51f7ad7c
+	trimbase = 
 	parent = upstream
 	previous = d5d8c1c2c
