--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = trajectory_tracker
-	base = 8e0c71c85
-	trimbase = 
+	base = 82c37ea3b
+	trimbase = 8e0c71c85
 	parent = upstream
 	previous = 3f8aae6f9
