--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = neonavigation_common
-	base = fc984f42d
-	trimbase = 
+	base = 208fac41a
+	trimbase = fc984f42d
 	parent = upstream
 	previous = 3f8aae6f9
